--- a/EduMultiPro 3 Parte/FrontEnd/css/2.css
+++ b/EduMultiPro 3 Parte/FrontEnd/css/2.css
@@ -9,6 +9,7 @@
     --azul: #007bbd;
     --blanco: rgb(253, 243, 229);
     --gris: rgb(99, 95, 95);
+    --azulClaro: #4aa2d1;
 }
 .contenedor{
     display: flex;
@@ -25,6 +26,7 @@
 
 #navegador{
     background: var(--azul);
+    border-bottom: 3px solid var(--azulClaro);
 }
 
 #n2{
@@ -44,122 +46,138 @@
     margin-top: 5px;
 }
 
+/* boton -------------------- boton*/
+#btn1{
+    padding: 0 0;
+}
+
+.btn-group{
+    width: 100%;
+    padding: 0;
+    background: #007bbd;
+    border-radius: 0;
+    border: 1px solid var(--azulClaro);
+}
+#abtn{
+    color: white;
+    border: 1px solid var(--azulClaro);
+}
+.dropdown-menu{
+    width: 100%;
+    background: var(--azul);
+}
+.dropdown-menu a{
+    border-bottom: 1px solid var(--azulClaro);
+    margin-top: 10px;
+    margin-bottom: 5px;
+    display: flex;
+    justify-content: center;
+}
+.dropdown-menu i{
+    color: white;
+    display: flex;
+    flex-direction: row;
+}
+.dropdown-menu p{
+    margin: auto 10px;
+}
+.dropdown-item:hover{
+    background: var(--azulClaro);
+}
+
+
 /* article -------------------- article */
 
 #centro{
     flex: 1;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 60px 0;
+    padding: 0;
 }
-.caja {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 30px;
-    max-width: 59%;
-    padding: 30px;
-    background: white;
-    border-radius: 20px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-    animation: bounceIn 1s ease-out;
-}
-
-@keyframes bounceIn {
-    0% { transform: scale(0.8); opacity: 0; }
-    60% { transform: scale(1.1); opacity: 1; }
-    100% { transform: scale(1); }
-}
-
-.cajalogin {
-    padding: 40px;
-    background: #c4e2f7;
-    border-radius: 20px;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
-#form h2 {
-    margin-bottom: 30px;
-    font-size: 30px;
-    color: #007bbd;
-    font-weight: bold;
-}
-
-#form input {
-    width: 80%;
-    padding: 15px;
-    margin-bottom: 20px;
-    border: 2px solid #007bbd;
-    border-radius: 10px;
-    font-size: 16px;
-    transition: border-color 0.3s;
-}
-
-#form input:focus {
-    border-color: #005a8d;
-    outline: none;
-}
-
-#form button {
-    padding: 15px 40px;
-    background: #007bbd;
-    color: white;
-    border: none;
-    border-radius: 30px;
-    font-size: 18px;
-}
-
-#form button:hover {
-    background: #005a8d;
-    transform: scale(1.1);
-}
-
-#form a {
-    margin-top: 15px;
-    color: #007bbd;
-    text-decoration: none;
-    font-size: 16px;
-    display: block;
-}
-
-#form a:hover {
-    text-decoration: underline;
-}
-
-.cajaimagen {
-    position: relative;
-    border-radius: 20px;
-    overflow: hidden;
-}
-
-.cajaimagen img {
-    position: absolute;
-    top: 0;
-    left: 0;
+.row {
+    display: flex;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0;
-    animation: fade 12s infinite;
-    transition: opacity 1s;
+    margin: 0;
+}
+#barraLateral{
+    width: 250px;
+    background-color: var(--azul);
+    display: flex;
+    flex-direction: column;
+}
+.menu{
+    display: flex;
+    flex-direction: column;
+}
+.menu a{
+    text-decoration: none;
+}
+.menu  i{
+    color: white;
+    display: flex;
+    flex-direction: row;
+    font-size: 18px;
+    padding: 15px 25px;
+    border-bottom: 1px solid var(--azulClaro);
+}
+.menu i p{
+    margin: 0px 10px;
+}
+i:hover{
+    cursor: pointer;
+    background: var(--azulClaro);
+}
+/* tabla -------------------- tabla*/
+#contenidoTabla{
+    flex: 1;
+    padding: 20px;
+}
+.titulo{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 30px;
+}
+ h1{
+    font-size: 30px;
 }
 
-.cajaimagen img:nth-child(1) {
-    animation-delay: 0s;
+.contenedor-tabla{  
+    overflow-x: auto;
+    margin: 0px 0px 20px 0px;
+    background-color: rgb(255, 237, 212);
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1); 
+    width: 100%; 
+}
+table{
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px ;
+}
+thead{
+    background-color: rgb(58, 58, 58);
+    color: var(--blanco);
+}
+#tablaUsuarios th, td{
+    padding: 10px;
+    text-align: center !important;
+    border: 1px solid rgb(173, 173, 173);
 }
 
-.cajaimagen img:nth-child(2) {
-    animation-delay: 4s;
+button{
+    background-color: var(--azul);
+    color: var(--blanco);
+    border: none;
+    padding: 8px 12px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s ease;
 }
 
-.cajaimagen img:nth-child(3) {
-    animation-delay: 8s;
-}
-
-@keyframes fade {
-    0%, 33% { opacity: 1; }
-    34%, 100% { opacity: 0; }
+button:hover{
+    background-color: black;
 }
 
 /* footer -------------------- footer */
@@ -213,37 +231,6 @@
         height: auto;
     }
 
-    .caja {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 30px;
-        max-width: 80%;
-        padding: 30px;
-        background: white;
-        border-radius: 20px;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-        animation: bounceIn 1s ease-out;
-        display: flex;
-        justify-content: center;
-    }
-    
-    .cajalogin {
-        width: 100% !important;
-        padding: 40px;
-        background: #c4e2f7;
-        border-radius: 20px;
-        box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
-        text-align: center;
-    }
-    #form input {
-        width: 100%;
-        padding: 15px;
-        margin-bottom: 20px;
-        border: 2px solid #007bbd;
-        border-radius: 10px;
-        font-size: 16px;
-        transition: border-color 0.3s;
-    }
 
     #pie{
         background-image: url("../img/gris fondo.jpg");
@@ -299,37 +286,7 @@
         max-width: 70px;
         height: auto;
     }
-    .caja {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 30px;
-        max-width: 80%;
-        padding: 30px;
-        background: white;
-        border-radius: 20px;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-        animation: bounceIn 1s ease-out;
-        display: flex;
-        justify-content: center;
-    }
     
-    .cajalogin {
-        width: 100% !important;
-        padding: 40px;
-        background: #c4e2f7;
-        border-radius: 20px;
-        box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
-        text-align: center;
-    }
-    #form input {
-        width: 100%;
-        padding: 15px;
-        margin-bottom: 20px;
-        border: 2px solid #007bbd;
-        border-radius: 10px;
-        font-size: 16px;
-        transition: border-color 0.3s;
-    }
     #pie{
         background-image: url("../img/gris fondo.jpg");
         height: 160px;
@@ -384,37 +341,7 @@
         max-width: 70px;
         height: auto;
     }
-    .caja {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 30px;
-        max-width: 80%;
-        padding: 30px;
-        background: white;
-        border-radius: 20px;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-        animation: bounceIn 1s ease-out;
-        display: flex;
-        justify-content: center;
-    }
     
-    .cajalogin {
-        width: 100% !important;
-        padding: 40px;
-        background: #c4e2f7;
-        border-radius: 20px;
-        box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
-        text-align: center;
-    }
-    #form input {
-        width: 100%;
-        padding: 15px;
-        margin-bottom: 20px;
-        border: 2px solid #007bbd;
-        border-radius: 10px;
-        font-size: 16px;
-        transition: border-color 0.3s;
-    }
     #pie{
         background-image: url("../img/gris fondo.jpg");
         height: 200px;
@@ -465,37 +392,7 @@
         max-width: 70px;
         height: auto;
     }
-    .caja {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 30px;
-        max-width: 80%;
-        padding: 30px;
-        background: white;
-        border-radius: 20px;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-        animation: bounceIn 1s ease-out;
-        display: flex;
-        justify-content: center;
-    }
     
-    .cajalogin {
-        width: 100% !important;
-        padding: 40px;
-        background: #c4e2f7;
-        border-radius: 20px;
-        box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
-        text-align: center;
-    }
-    #form input {
-        width: 100%;
-        padding: 15px;
-        margin-bottom: 20px;
-        border: 2px solid #007bbd;
-        border-radius: 10px;
-        font-size: 16px;
-        transition: border-color 0.3s;
-    }
     #pie{
         background-image: url("../img/gris fondo.jpg");
         height: 220px;
@@ -549,34 +446,7 @@
         max-width: 55px;
         height: auto;
     }
-    .caja {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 30px;
-        max-width: 80%;
-        padding: 30px;
-        background: white;
-        border-radius: 20px;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-        animation: bounceIn 1s ease-out;
-    }
     
-    .cajalogin {
-        padding: 40px;
-        background: #c4e2f7;
-        border-radius: 20px;
-        box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
-        text-align: center;
-    }
-    #form input {
-        width: 100%;
-        padding: 15px;
-        margin-bottom: 20px;
-        border: 2px solid #007bbd;
-        border-radius: 10px;
-        font-size: 16px;
-        transition: border-color 0.3s;
-    }
     #pie{
         background-image: url("../img/gris fondo.jpg");
         height: 220px;
@@ -630,17 +500,7 @@
         max-width: 70px;
         height: auto;
     }
-    .caja {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 30px;
-        max-width: 80%;
-        padding: 30px;
-        background: white;
-        border-radius: 20px;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-        animation: bounceIn 1s ease-out;
-    }
+    
     #pie{
         background-image: url("../img/gris fondo.jpg");
         height: 130px;
