--- a/EduMultiPro 3 Parte/FrontEnd/css/8.8.css
+++ b/EduMultiPro 3 Parte/FrontEnd/css/8.8.css
@@ -131,38 +131,81 @@ i:hover{
     flex: 1;
     padding: 20px;
 }
-.titulo{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 30px;
-}
- h1{
-    font-size: 30px;
+.editar{
+    width: 70px;
+    height: 40px;
+    border-radius: 10px;
+    background: var(--azul);
+    color: white;
+    border: 2px solid var(--azulClaro);
+    margin: 20px 0px 0px 85%;
 }
 
-.contenedor-tabla{  
-    overflow-x: auto;
-    margin: 0px 0px 20px 0px;
-    background-color: rgb(255, 237, 212);
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1); 
-    width: 100%; 
+.salir{
+    width: 70px;
+    height: 40px;
+    border-radius: 10px;
+    background: var(--azul);
+    color: white;
+    border: 2px solid var(--azulClaro);
+    margin: 20px 0px 0px 85%;
 }
-button{
-    background-color: var(--azul);
-    color: var(--blanco);
-    border: none;
-    padding: 8px 12px;
-    border-radius: 5px;
+.salir:hover{
     cursor: pointer;
-    font-size: 14px;
-    transition: background-color 0.3s ease;
+    transform: scale(1.1);
+}
+#cont1{
+    background: var(--azul);
+    border-radius: 15px;
+    margin: 30px auto 20px auto;
+    padding: 40px 20px;
+    width: 80%;
+    height: auto;
 }
 
 button:hover{
     background-color: black;
+}
+
+.cont2{
+    width: 100%;
+    padding: 20px;
+    background: var(--blanco);
+}
+#h0{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+#h0 h2{
+    font-size: 50px;
+    color: var(--azul);
+}
+#h1{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+    padding: 0px 90px;
+}
+#h2{
+    display: flex;
+    justify-content: center; 
+    margin-bottom: 30px;
+}
+#h2 img{
+    width: 90%;
+    height: auto;
+}
+#h3{
+    display: flex;
+    justify-content: center;    
+    margin-bottom: 30px;
+    padding-left: 100px;
+}
+#h4{
+    display: flex;
+    justify-content: center;    
+    margin-bottom: 30px;
 }
 /* footer -------------------- footer */
 
