--- a/EduMultiPro 3 Parte/FrontEnd/admin/css/5.6.css
+++ b/EduMultiPro 3 Parte/FrontEnd/admin/css/5.6.css
@@ -129,221 +129,117 @@ i:hover{
 /* tabla -------------------- tabla*/
 #contenidoTabla{
     flex: 1;
+    padding: 50px 100px;
 }
-.parte1{
-    margin: 20px 0px;
-    padding: 15px;
+#nav{
+    border-bottom: 2px solid black;
     width: 100%;
+}
+#nav .col-xl-2{
+    display: flex;
+    justify-content: center;
+}
+#nav .col-xl-2 button{
+    border: none;
+    background: var(--blanco);
+    font-size: 32px;
+    width: 85%;
+}
+#nav .col-xl-2 button:hover{
+    background: var(--azulClaro);
+}
+
+#novedad{
+    margin: 30px auto;
+    width: 87%;
+}
+#novedad h2{
+    font-size: 40px;
+    font-style: italic;
+}
+#canuncio{
+    display: flex;
+    justify-content: end;
+}
+#canuncio button{
+    background: var(--azulClaro);
+    color: white;
+    border: 1px solid var(--azul);
+    border-radius: 20px;
+    padding: 10px;
     height: auto;
-    display: flex; 
-    align-items: center;
-    background: var(--azulClaro);
-    background-position: center;
-    background-size: cover;
-    justify-content: flex-end;
 }
-.parte1 button{
-    margin: 0px 8px;
-   width: 120px;
-   height: 100%;
-   border: none;
-   font-size: 15px;
-   border-bottom: none;
-   background: var(--azulClaro);
-    color: white;
-    font-size: 18px;
-}
-.parte1 button:hover{
-    transform: scale(1.1);
-    background: #37c1e4;
-    cursor: pointer;
-}
-/* parte2 -------------------- centro*/
-.parte2 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin: 30px 0px;
-}
-.parte2 .contenedorTabla{
-    width: 800px;
-    height: 320px;
-}
-.parte2 .contenedorTabla .titulo{
-    width: 100%;
-    height: 40px;
-    background: var(--azulClaro);
-    display: flex;
-    align-items: center;
-}
-.titulo h2{
-    margin: 0px 20px;
-    color: white;
-}
-
-.contenedorTabla .selector{
-    display: flex;
-    flex-direction: row;
-}
-.contenedorTabla .selector input{
-    margin: 15px 0px 0px 30px;
-    padding: 0px 15px;
-    width: 350px;
-    height: 35px;
-    border-radius: 10px;
-}
-.contenedorTabla .selector #boton1{
-    margin: 18px 5px;
-    background: var(--azulClaro);
-    width: 80px;
-    height: 30px;
-    border-radius: 10px;
-    border: none;
-    color: white;
-}
-.contenedorTabla .selector #boton2{
-    margin: 18px 0px 0px 110px;
-    background: var(--azulClaro);
-    width: 100px;
-    height: 30px;
-    border-radius: 10px;
-    border: none;
-    color: white;
-}
-.contenedorTabla .selector #boton1:hover{
-    background: white;
+#canuncio button:hover{
+    background: var(--azul);
     border: 1px solid var(--azulClaro);
-    color: var(--azulClaro);
-    cursor: pointer;
+    transform: scale(1.1);
 }
-/* tabla 1 -------------------- tabla 1*/
-#periodos{
-    width: 730px;
-    margin: 10px auto;
-    border-collapse: collapse;
-} 
-#periodos th{
-    background: var(--azulClaro);
-}
-#periodos th, td{
-    padding: 0px 10px;
-    border: 1px solid rgb(223, 185, 141);
-    text-align: center !important;
-}
-#periodos th h2{
-    font-size: 20px;
-    color: white;
-}
-#periodos tbody tr td{
-    font-size: 14px;
-}
-#periodos tbody tr td button{
-    width: 20px;
-    height: 20px;
-}
-.parte2 .logros{
-    width: 600px;
-    height: 300px;
-    border-left: 1px solid var(--azulClaro);
-    display: flex;
-    flex-direction: column;
-}
-.parte2 .logros .titulo{
-    width: 100%;
-    height: 40px;
-    background: var(--azulClaro);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-/* tabla 2 -------------------- tabla 2*/
-#logro{
-    margin: 75px auto 0px auto;
-    width: 550px;
-    border-collapse: collapse;
-}
-#logro th{
-    background: var(--azulClaro);
-}
-#logro th, td{
-    padding: 0px 10px;
-    border: 1px solid rgb(223, 185, 141);
-    text-align: center !important;
-}
-#logro th h2{
-    font-size: 20px;
-    color: white;
-}
-#logro tbody tr td{
-    font-size: 14px;
-}
-#logro tbody tr td select{
-    margin: 5px 0px;
-    width: 350px;
-    background: var(--blanco);
-    border: none;
-}
-#logro tbody tr td input{
-    margin: 5px 0px;
-    padding: 0px 10px;
-    width: 350px;
-    height: 43px;
-    background: var(--blanco);
-    border: none;
-}
-/* tabla 3-------------------- tabla 3*/
 
-.parte3 #estudiantesLista{
-    border-collapse: collapse;
-    margin: 40px auto;
-    width: 1300px;
+/* parte2 -------------------- centro*/
+#parte2{
+    border: 1px solid rgb(231, 187, 136);
+    width: 60%;
+    height: auto;
+    margin: 50px auto;
 }
-#estudiantesLista th{
-    background: var(--azulClaro);
+#parte2 .carpeta{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
-#estudiantesLista th, td{
-    padding: 0px 10px;
-    border: 1px solid rgb(223, 185, 141);
-    text-align: center !important;
+#parte2 .carpeta h2{
+    margin: 20px 20px;
+    font-size: 35px;
+    
 }
-#estudiantesLista th h2{
-    font-size: 20px;
-    color: white;
+#parte2 .carpeta img{
+    margin: 30px 40px;
+    width: 30px;
+    height: 30px;
 }
-#estudiantesLista thead tr th button{
-    width: 15px;
-    height: 15px;
-    cursor: pointer;
-}
-#estudiantesLista tbody tr td{
-    font-size: 14px;
-    padding: 10px 10px;
-}
-#estudiantesLista tbody tr td button{
-    width: 20px;
-    height: 20px;
-    cursor: pointer;
-}
-#estudiantesLista tbody tr td input{
-    width: 70px;
-    background: var(--blanco);
-    border: none;
-    border-bottom: 1px solid black;
-}
-#estudiantesLista tbody tr td img{
-    width: 20px;
-    height: 15px;
-}
-#estudiantesLista tbody tr td img:hover{
+#parte2 .carpeta img:hover{
     transform: scale(1.3);
     cursor: pointer;
 }
-#estudiantesLista tbody tr td select{
-    background: var(--blanco);
-    border: none;
+#parte2 .tarea{
+    margin: 10px auto 20px auto;
+    width: 800px;
+    height: 60px;
+    border-radius: 20px;
+    background: #007bbd;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+#parte2 .tarea:hover{
+    background: var(--azulClaro);
+    cursor: pointer;
+}
+#parte2 .tarea .titulo{
+    display: flex;
+    flex-direction: row;
+}
+#parte2 .tarea .titulo img{
+    margin: 0px 20px;
+    width: 40px;
+    height: 40px;
+}
+#parte2 .tarea .titulo h2{
+    margin: 0px 10px;
+    color: white;
+    font-size: 30px;
+}
+#parte2 .tarea img{
+    margin: 0px 20px;
+    width: 35px;
+    height: 35px;
+}
+#parte2 .tarea img:hover{
+    transform: scale(1.3);
+    cursor: pointer;
 }
 /* footer -------------------- footer */
-
 #pie{
     background-image: url("../css/gris\ fondo.jpg");
     height: 130px;
