--- a/EduMultiPro 3 Parte/FrontEnd/admin/css/5.9.css
+++ b/EduMultiPro 3 Parte/FrontEnd/admin/css/5.9.css
@@ -130,220 +130,153 @@ i:hover{
 #contenidoTabla{
     flex: 1;
 }
+
 .parte1{
-    margin: 20px 0px;
-    padding: 15px;
+    margin: 20px 0px 0px 0px;
+    padding: 8px;
     width: 100%;
     height: auto;
-    display: flex; 
-    align-items: center;
     background: var(--azulClaro);
-    background-position: center;
-    background-size: cover;
-    justify-content: flex-end;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+.parte1 .icono{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.parte1 .icono p{
+    color: white;
+    font-size: 40px;
+    margin: 0px 0px 0px 10px;
+}
+.parte1 .icono img{
+    margin: 0px 0px 0px 30px;
+    width: 40px;
+    height: 40px;
+}
+#salir:hover{
+    transform: scale(1.2);
+    cursor: pointer;
 }
 .parte1 button{
-    margin: 0px 8px;
-   width: 120px;
-   height: 100%;
-   border: none;
-   font-size: 15px;
-   border-bottom: none;
-   background: var(--azulClaro);
+    margin: 10px 40px 0px 0px;
+    width: 150px;
+    height: 40px;
     color: white;
-    font-size: 18px;
+    font-size: 25px;
+    border-radius: 20px;
+    background: #007bbd;
+    border: 1px solid white;
 }
 .parte1 button:hover{
     transform: scale(1.1);
-    background: #37c1e4;
     cursor: pointer;
 }
 /* parte2 -------------------- centro*/
-.parte2 {
+.parte{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    margin: 30px 0px;
-}
-.parte2 .contenedorTabla{
-    width: 800px;
-    height: 320px;
-}
-.parte2 .contenedorTabla .titulo{
     width: 100%;
-    height: 40px;
-    background: var(--azulClaro);
-    display: flex;
-    align-items: center;
+    height: 100%;
 }
-.titulo h2{
-    margin: 0px 20px;
-    color: white;
-}
-
-.contenedorTabla .selector{
-    display: flex;
-    flex-direction: row;
-}
-.contenedorTabla .selector input{
-    margin: 15px 0px 0px 30px;
-    padding: 0px 15px;
-    width: 350px;
-    height: 35px;
-    border-radius: 10px;
-}
-.contenedorTabla .selector #boton1{
-    margin: 18px 5px;
-    background: var(--azulClaro);
-    width: 80px;
-    height: 30px;
-    border-radius: 10px;
-    border: none;
-    color: white;
-}
-.contenedorTabla .selector #boton2{
-    margin: 18px 0px 0px 110px;
-    background: var(--azulClaro);
-    width: 100px;
-    height: 30px;
-    border-radius: 10px;
-    border: none;
-    color: white;
-}
-.contenedorTabla .selector #boton1:hover{
-    background: white;
-    border: 1px solid var(--azulClaro);
-    color: var(--azulClaro);
-    cursor: pointer;
-}
-/* tabla 1 -------------------- tabla 1*/
-#periodos{
-    width: 730px;
-    margin: 10px auto;
-    border-collapse: collapse;
-} 
-#periodos th{
-    background: var(--azulClaro);
-}
-#periodos th, td{
-    padding: 0px 10px;
-    border: 1px solid rgb(223, 185, 141);
-    text-align: center !important;
-}
-#periodos th h2{
-    font-size: 20px;
-    color: white;
-}
-#periodos tbody tr td{
-    font-size: 14px;
-}
-#periodos tbody tr td button{
-    width: 20px;
-    height: 20px;
-}
-.parte2 .logros{
-    width: 600px;
-    height: 300px;
-    border-left: 1px solid var(--azulClaro);
+.parte2{
+    width: 25%;
+    height: 100%;
+    background: #4aa2d1;
+    border: 1px solid #317599;
     display: flex;
     flex-direction: column;
 }
-.parte2 .logros .titulo{
-    width: 100%;
-    height: 40px;
-    background: var(--azulClaro);
+.parte2 label{
+    margin: 20px 0px 10px 20px;
+    font-size: 25px;
+}
+.parte2 select {
+    width: 70%;
+    height: 35px;
+    border: none;
+    border-radius: 20px;
+    margin: 0px 20px;
+    padding-left: 10px;
+}
+
+.parte2 input{
+    width: 70%;
+    height: 35px;
+    border: none;
+    border-radius: 20px;
+    margin: 0px 20px;
+    padding-left: 10px;
+}
+.op1{
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: row;
+    margin: 20px 0px 10px 10px;
 }
-/* tabla 2 -------------------- tabla 2*/
-#logro{
-    margin: 75px auto 0px auto;
-    width: 550px;
-    border-collapse: collapse;
-}
-#logro th{
-    background: var(--azulClaro);
-}
-#logro th, td{
-    padding: 0px 10px;
-    border: 1px solid rgb(223, 185, 141);
-    text-align: center !important;
-}
-#logro th h2{
-    font-size: 20px;
-    color: white;
-}
-#logro tbody tr td{
-    font-size: 14px;
-}
-#logro tbody tr td select{
-    margin: 5px 0px;
-    width: 350px;
-    background: var(--blanco);
-    border: none;
-}
-#logro tbody tr td input{
-    margin: 5px 0px;
-    padding: 0px 10px;
-    width: 350px;
-    height: 43px;
-    background: var(--blanco);
-    border: none;
-}
-/* tabla 3-------------------- tabla 3*/
-
-.parte3 #estudiantesLista{
-    border-collapse: collapse;
-    margin: 40px auto;
-    width: 1300px;
-}
-#estudiantesLista th{
-    background: var(--azulClaro);
-}
-#estudiantesLista th, td{
-    padding: 0px 10px;
-    border: 1px solid rgb(223, 185, 141);
-    text-align: center !important;
-}
-#estudiantesLista th h2{
-    font-size: 20px;
-    color: white;
-}
-#estudiantesLista thead tr th button{
-    width: 15px;
-    height: 15px;
-    cursor: pointer;
-}
-#estudiantesLista tbody tr td{
-    font-size: 14px;
-    padding: 10px 10px;
-}
-#estudiantesLista tbody tr td button{
-    width: 20px;
+.op1 select{
     height: 20px;
-    cursor: pointer;
-}
-#estudiantesLista tbody tr td input{
-    width: 70px;
-    background: var(--blanco);
-    border: none;
-    border-bottom: 1px solid black;
-}
-#estudiantesLista tbody tr td img{
-    width: 20px;
-    height: 15px;
-}
-#estudiantesLista tbody tr td img:hover{
-    transform: scale(1.3);
-    cursor: pointer;
-}
-#estudiantesLista tbody tr td select{
-    background: var(--blanco);
+    width: 17%;
     border: none;
 }
-/* footer -------------------- footer */
+.op1 p{
+    font-size: 13px;
+}
+/* parte3 -------------------- centro*/
+.parte .a2parte{
+    display: flex;
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+}
+.parte3{
+    margin: 30px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 70%;
+    height: 45%;
+    background: var(--azulClaro);
+    border-radius: 15px;
+}
+.parte3 #titulo{
+    margin: 25px;
+    padding: 0px 20px;
+    width: 87%;
+    height: 20%;
+    border-radius: 10px;
+    border: none;
+    background: var(--blanco);
+    font-size: 20px;
+}
+.parte3 #titulo:hover{
+    background: white;
+}
+.parte3 #desc{
+    padding: 0px 20px;
+    width: 87%;
+    height: 55%;
+    border-radius: 10px;
+    border: none;
+    background: var(--blanco);
+    font-size: 20px;
+}
+.parte3 #desc:hover{
+    background: white;
+}
+/* parte3 -------------------- centro*/
+.parte4{
+    margin: 30px auto;
+    width: 70%;
+    height: auto;
+    background: var(--azulClaro);
+    border-radius: 15px;
+    padding: 20px 20px;
+} 
 
+/* footer -------------------- footer */
 #pie{
     background-image: url("../css/gris\ fondo.jpg");
     height: 130px;
