--- a/EduMultiPro 3 Parte/FrontEnd/admin/css/7.7.css
+++ b/EduMultiPro 3 Parte/FrontEnd/admin/css/7.7.css
@@ -150,19 +150,52 @@ i:hover{
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1); 
     width: 100%; 
 }
-button{
-    background-color: var(--azul);
+
+
+.contenedor-tabla{  
+    overflow-x: auto;
+    margin: 0px 0px 20px 0px;
+    background-color: rgb(255, 237, 212);
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1); 
+    width: 100%; 
+}
+table{
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0px;
+}
+thead{
+    background-color: rgb(58, 58, 58);
     color: var(--blanco);
-    border: none;
-    padding: 8px 12px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 14px;
-    transition: background-color 0.3s ease;
+}
+#tablaUsuarios th, td{
+    padding: 10px;
+    text-align: center !important;
+    border: 1px solid rgb(173, 173, 173);
 }
 
-button:hover{
-    background-color: black;
+#w1{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#nota{
+    width: 80px;
+    background: rgb(255, 237, 212);
+    border: none;
+}
+#img1{
+    margin: 0px 0px 0px 50px;
+    height: 15px;
+    width: 20px;
+}
+#img1:hover{
+    transform: scale(1.3);
+    cursor: pointer;
 }
 /* footer -------------------- footer */
 
